k8s/istio/istio-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: model-service
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /model
    route:
    - destination:
        host: model-service
        port:
          number: 5000
